--- a/.github/workflows/supported.yml
+++ b/.github/workflows/supported.yml
@@ -35,7 +35,7 @@ jobs:
         gemfile:
           - awesome_print
           - colored2
-          - colorized
+          - colorize
         rubygems:
           - latest
         bundler:
