--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,13 +1,2 @@
-inherit_from: .rubocop_todo.yml
-
-AllCops:
-  TargetRubyVersion: 2.6
-  NewCops: enable
-
-Style/StringLiterals:
-  Enabled: true
-  EnforcedStyle: double_quotes
-
-Style/StringLiteralsInInterpolation:
-  Enabled: true
-  EnforcedStyle: double_quotes
+inherit_gem:
+  rubocop-lts: rubocop-lts.yml
