--- a/.github/workflows/supported.yml
+++ b/.github/workflows/supported.yml
@@ -33,9 +33,9 @@ jobs:
       matrix:
         experimental: [false]
         gemfile:
-          - awesome_print
-          - colored2
-          - colorize
+          - contexts/awesome_print
+          - contexts/colored2
+          - contexts/colorize
         rubygems:
           - latest
         bundler:
@@ -44,6 +44,7 @@ jobs:
           - "2.7"
           - "3.0"
           - "3.1"
+          - "3.2"
           - truffleruby
           - jruby
 
