--- a/.github/workflows/unsupported.yml
+++ b/.github/workflows/unsupported.yml
@@ -32,15 +32,16 @@ jobs:
       matrix:
         experimental: [false]
         gemfile:
-          - awesome_print
-          - colored2
-          - colorize
+          - contexts/awesome_print
+          - contexts/colored2
+          - contexts/colorize
         rubygems:
           - latest
         bundler:
           - latest
         ruby:
           - "2.6"
+          - "2.7"
 
     runs-on: ubuntu-20.04
     continue-on-error: ${{ matrix.experimental || endsWith(matrix.ruby, 'head') }}
