--- a/.github/workflows/supported.yml
+++ b/.github/workflows/supported.yml
@@ -36,6 +36,7 @@ jobs:
           - contexts/awesome_print
           - contexts/colored2
           - contexts/colorize
+          - contexts/term_ansicolor
         rubygems:
           - latest
         bundler:
