⬆️ kettle-soup-cover v1.0.1

--- a/.envrc
+++ b/.envrc
@@ -5,11 +5,10 @@ PATH_add bin
 # Override and customize any of these in your own .env.local
 # If you are using dotenv and not direnv,
 #   copy the following `export` statements to your own .env file.
-export CI_CODECOV=true
-export COVER_ALL=false
+export K_SOUP_COV_DO=true
 export K_SOUP_COV_MIN_HARD=true
-export K_SOUP_COV_MIN_BRANCH=77
-export K_SOUP_COV_MIN_LINE=84
+export K_SOUP_COV_MIN_BRANCH=81
+export K_SOUP_COV_MIN_LINE=86
 
 # .env would override anything in this file, if enabled.
 # .env is a DOCKER standard, and if we use it, it would be in deployed, or DOCKER, environments.
